# TexFile

./: .gitignore  FORMAT.tex  codespace+latex.docx  codespace+latex.md  graph.ipynb  program_flowchart
AI_Report/: AI_Background.tex  AI_Background.toc  ai_report.aux  ai_report.tex  ai_report.toc  references.bib  test.tex  test.toc
Algorithm_Project/: .fuse_hidden0001d83e00000002  algorithm.hpp  essay.tex  essay.toc  main  main.cpp
Algorithm_Project/code/: algorithm.hpp  tempCodeRunnerFile  tempCodeRunnerFile.cpp
Algorithm_Project/testfile/: test01.txt  test02.txt  test03.txt  test04.txt
Computer_Network/: essay.tex  essay.toc
Electric/: de.tex  de.toc  mdian.ms10  mdian.synctex(busy)  mdian.tex  mdian.toc  references.bib  test.cpp
Embedded_Development/: .~lock.基于STM32的嵌入式系统原理与设计第一.ppt#  .~lock.第1讲 嵌入式Linux系统编程概述.pptx#  Android+复习提纲.txt  Embedded_Development.tex  Embedded_Development.toc  STM32复习提纲.txt  基于STM32的嵌入式系统原理与设计第一.ppt  基于STM32的嵌入式系统原理与设计第四.ppt  第1讲 嵌入式Linux系统编程概述.pptx  第5讲 Linux多线程编程.ppt
MLA/: AI.run.xml  AI.tex  bibliography.bib  lit-review.tex
Microeconomic/: graph.py  problem1.tex  problem2.tex  problem3.tex  problem4.tex  problem5.tex
Mobile_Calculation/: essay.tex
ProgramPractice/: ProgramPractice.tex  ProgramPractice.toc  for.cpp  fulu.tex
Robotic/: Atlas.tex  cv.tex  references.bib
TOEFL_md/: L_240131.md  L_Practice.md  O_240129.md  R_240127.md  W_240201.md  Writing.txt  Writing_2.txt
picture/: pic.py  picture.tex
prob3/attachments/: CMakeLists.txt  quick_sort.hpp
prob3/attachments/tests/: test_sorting.cpp
(+25 files in other folders)
